2011-06-06  Barát Tibor  <Barat.Tibor@stud.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        [Qt] Implement download feature for QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=61865

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::downloadRequest):
        (LauncherWindow::fileDownloadFinished):
        * QtTestBrowser/launcherwindow.h:

2011-06-01  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        nrwt: make webaudio work w/o content-length header
        https://bugs.webkit.org/show_bug.cgi?id=61819

        * Scripts/webkitpy/layout_tests/layout_package/printing.py:
        * Scripts/webkitpy/layout_tests/layout_package/single_test_runner.py:
        * Scripts/webkitpy/layout_tests/port/mock_drt.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:

2011-05-31  Ademar de Souza Reis Jr  <ademar.reis@openbossa.org>

        Reviewed by Simon Hausmann.

        [Qt] User-agent list of Qt test browsers is very outdated
        https://bugs.webkit.org/show_bug.cgi?id=61531

        The user can edit the user-agent manually, so there's no need to have
        a super complete and up to date list, but it's nice to have it
        minimally updated.

        * MiniBrowser/qt/useragentlist.txt:
        * QtTestBrowser/useragentlist.txt:

2011-05-31  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        [Qt] Implement find feature for QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=61425

        Buildfix for --minimal and CONFIG+=qt_minimal build.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::createChrome):
        * QtTestBrowser/launcherwindow.h:

2011-05-31  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        [Qt] Implement find feature for QtTestBrowser